Echo: fixed "exit behaviour"

--- a/idea/echo/echo.page.scss
+++ b/idea/echo/echo.page.scss
@@ -13,5 +13,8 @@
   ion-card-content {
     margin-bottom: 20px;
     font-size: 1.2em;
+    p.youCanCloseMe {
+      margin-top: 12px;
+    }
   }
 }
