--- a/idea/agenda/calendar.component.html
+++ b/idea/agenda/calendar.component.html
@@ -14,7 +14,7 @@
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <div class="maxWidthContainer" *ngIf="calendar">
+  <div class="maxWidthContainer" *ngIf="_calendar">
     <ion-list class="aList">
       <ion-item
         lines="inset"
@@ -22,7 +22,7 @@
         [title]="t._('IDEA.AGENDA.CALENDARS.NAME_HINT')"
       >
         <ion-label position="stacked">{{ 'IDEA.AGENDA.CALENDARS.NAME' | translate }} </ion-label>
-        <ion-input [placeholder]="t._('IDEA.AGENDA.CALENDARS.NAME_HINT')" [(ngModel)]="calendar.name"></ion-input>
+        <ion-input [placeholder]="t._('IDEA.AGENDA.CALENDARS.NAME_HINT')" [(ngModel)]="_calendar.name"></ion-input>
       </ion-item>
       <ion-item
         lines="inset"
@@ -32,18 +32,18 @@
         <ion-label position="stacked">{{ 'IDEA.AGENDA.CALENDARS.DESCRIPTION' | translate }} </ion-label>
         <ion-input
           [placeholder]="t._('IDEA.AGENDA.CALENDARS.DESCRIPTION_HINT')"
-          [(ngModel)]="calendar.description"
+          [(ngModel)]="_calendar.description"
         ></ion-input>
       </ion-item>
       <idea-color-picker
         [lines]="'inset'"
-        [current]="calendar.color"
+        [current]="_calendar.color"
         [label]="t._('IDEA.AGENDA.CALENDARS.COLOR')"
         [class.fieldHasError]="hasFieldAnError('color')"
-        (select)="$event ? (calendar.color = $event) : null"
+        (select)="$event ? (_calendar.color = $event) : null"
       ></idea-color-picker>
       <idea-checker
-        *ngIf="membershipsChecks && calendar.isShared()"
+        *ngIf="membershipsChecks && _calendar.isShared()"
         [data]="membershipsChecks"
         [label]="t._('IDEA.AGENDA.CALENDARS.USERS_ALLOWED_TO_MANAGE_APPOINTMENTS')"
         [searchPlaceholder]="t._('IDEA.AGENDA.CALENDARS.WHO_CAN_MANAGE_APPOINTMENTS')"
@@ -52,7 +52,7 @@
         [lines]="'inset'"
       ></idea-checker>
     </ion-list>
-    <ion-list class="aList" *ngIf="calendar.external?.service">
+    <ion-list class="aList" *ngIf="_calendar.external?.service">
       <ion-list-header>
         <ion-label>
           <h2>{{ 'IDEA.AGENDA.CALENDARS.INFO_ON_CALENDAR' | translate }}</h2>
@@ -61,14 +61,14 @@
       <ion-item lines="inset">
         <ion-label>
           {{ 'IDEA.AGENDA.CALENDARS.LINKED_TO' | translate }}
-          {{ 'IDEA.AGENDA.CALENDARS.SERVICES.' + calendar.external.service | translate }}
-          <p>{{ calendar.external.name }} ({{ calendar.external.email }})</p>
+          {{ 'IDEA.AGENDA.CALENDARS.SERVICES.' + _calendar.external.service | translate }}
+          <p>{{ _calendar.external.name }} ({{ _calendar.external.email }})</p>
         </ion-label>
-        <ion-icon slot="end" [name]="getServiceIcon(calendar.external.service)"></ion-icon>
+        <ion-icon slot="end" [name]="calendars.getServiceIcon(_calendar.external.service)"></ion-icon>
       </ion-item>
       <ion-item lines="inset">
         <ion-label>
-          {{ 'IDEA.AGENDA.CALENDARS.ACCESS_LEVELS.' + calendar.external.userAccess | translate }}
+          {{ 'IDEA.AGENDA.CALENDARS.ACCESS_LEVELS.' + _calendar.external.userAccess | translate }}
           <p>{{ 'IDEA.AGENDA.CALENDARS.BASED_ON_EXTERNAL_SERVICE_SHARING_PERMISSION' | translate }}</p>
         </ion-label>
         <ion-icon slot="end" name="shield"></ion-icon>
