--- a/idea/agenda/agenda.component.scss
+++ b/idea/agenda/agenda.component.scss
@@ -13,21 +13,20 @@
       font-weight: 500;
     }
   }
-  .eventIcons {
-    position: absolute;
-    bottom: 3px;
-    opacity: 0.7;
-    padding-left: 3px;
-  }
-  .eventAvatars {
-    position: absolute;
-    bottom: 1px;
-    right: 4px;
+  .eventGadgets {
+    margin-top: 4px;
+    margin-left: 5px;
+    text-align: right;
     ion-avatar {
-      display: inline-block;
-      margin: 0 1px;
+      display: block;
+      float: left;
+      margin: 2px 1px;
       width: 14px;
       height: 14px;
+    }
+    ion-icon {
+      opacity: 0.7;
+      font-size: 1.15em;
     }
   }
   @media only screen and (max-width: 575px) {
