Agenda: option to hide colors

--- a/idea/agenda/calendar.component.html
+++ b/idea/agenda/calendar.component.html
@@ -36,6 +36,7 @@
         ></ion-input>
       </ion-item>
       <idea-color-picker
+        *ngIf="!hideColor"
         [lines]="'inset'"
         [current]="_calendar.color"
         [label]="t._('IDEA.AGENDA.CALENDARS.COLOR')"
