--- a/idea/limit/limit.component.html
+++ b/idea/limit/limit.component.html
@@ -2,7 +2,7 @@
   <ion-button fill="clear" slot="start" *ngIf="description" (click)="showDescription($event)">
     <ion-icon name="help-circle-outline" slot="icon-only"></ion-icon>
   </ion-button>
-  <ion-label>
+  <ion-label class="ion-text-wrap">
     {{ name }}
     <p *ngIf="renewsOn">
       {{ 'IDEA.LIMIT.COUNTER_WILL_BE_RESET_ON_' | translate: { date: Moment(renewsOn).format('LL') } }}
