--- a/idea/agenda/agenda.component.html
+++ b/idea/agenda/agenda.component.html
@@ -123,7 +123,7 @@
       <div class="eventGadgets" *ngIf="!weekEvent.event.allDay">
         <ion-icon *ngFor="let icon of weekEvent.event.icons" [name]="icon.name" [title]="icon.title"></ion-icon>
         <ion-avatar *ngFor="let avatar of weekEvent.event.avatars" [title]="avatar.title">
-          <ion-img [src]="avatar.url"></ion-img>
+          <ion-img [src]="avatar.url" (ionError)="loadFallbackAvatar($event?.target)"></ion-img>
         </ion-avatar>
       </div>
     </div>
