Removed extBrowser & downloader: use capacitor

--- a/idea/subscription/subscription.component.html
+++ b/idea/subscription/subscription.component.html
@@ -70,7 +70,7 @@
         expand="block"
         fill="clear"
         color="medium"
-        (click)="extBrowser.openLink(t._('IDEA_VARIABLES.TERMS_AND_CONDITIONS_URL'))"
+        (click)="openLink(t._('IDEA_VARIABLES.TERMS_AND_CONDITIONS_URL'))"
       >
         {{ 'IDEA.AUTH.TERMS_AND_CONDITIONS' | translate }}
       </ion-button>
@@ -79,7 +79,7 @@
         expand="block"
         fill="clear"
         color="medium"
-        (click)="extBrowser.openLink(t._('IDEA_VARIABLES.PRIVACY_POLICY_URL'))"
+        (click)="openLink(t._('IDEA_VARIABLES.PRIVACY_POLICY_URL'))"
       >
         {{ 'IDEA.AUTH.PRIVACY_POLICY' | translate }}
       </ion-button>
