Improved UI of several components

--- a/idea/colors/colorPicker.component.html
+++ b/idea/colors/colorPicker.component.html
@@ -6,10 +6,11 @@
   [class.withLabel]="label"
   (click)="openPalette($event)"
 >
+  <ion-button fill="clear" slot="start" *ngIf="icon" [color]="iconColor" (click)="doIconSelect($event)">
+    <ion-icon [name]="icon" slot="icon-only"></ion-icon>
+  </ion-button>
   <ion-label *ngIf="label" [class.selectable]="!disabled">
-    {{ label }}
-    <ion-text class="obligatoryDot" *ngIf="obligatory && !disabled"></ion-text>
-    <p *ngIf="!disabled">{{ placeholder }}</p>
+    {{ label }} <ion-text class="obligatoryDot" *ngIf="obligatory && !disabled"></ion-text>
   </ion-label>
   <ion-avatar slot="end" class="colorCircle" [style.background-color]="current"></ion-avatar>
   <ion-icon slot="end" name="caret-down" class="selectIcon" *ngIf="!disabled" [class.selectable]="!disabled"></ion-icon>
