--- a/idea/email/emailData.component.html
+++ b/idea/email/emailData.component.html
@@ -30,5 +30,5 @@
       <ion-text>{{ 'IDEA.EMAIL.BCC' | translate }}:</ion-text> {{ emailData.bcc.join(', ') }}
     </p>
   </div>
-  <ion-icon slot="end" name="caret-down" class="selectIcon" *ngIf="!disabled"></ion-icon>
+  <ion-icon slot="end" name="chevron-forward" class="selectIcon"></ion-icon>
 </ion-item>
