--- a/idea/email/emailData.component.scss
+++ b/idea/email/emailData.component.scss
@@ -22,17 +22,15 @@
     color: var(--ion-color-medium);
   }
   .selectIcon {
-    margin: 0;
-    padding-left: 4px;
-    font-size: 0.8em;
-    color: var(--ion-color-medium);
+    color: var(--ion-color-step-200);
+    font-size: 1.3em;
   }
 }
 .emailDataItem.withLabel {
   min-height: 58px;
   height: auto;
   .selectIcon {
-    padding-top: 25px;
+    padding-top: 4px;
   }
   ion-button[slot='start'] {
     margin-top: 16px;
