--- a/idea/labeler/label.component.html
+++ b/idea/labeler/label.component.html
@@ -16,7 +16,9 @@
   >
     <ion-icon [name]="icon" slot="icon-only"></ion-icon>
   </ion-button>
-  <ion-label position="stacked" *ngIf="label">{{ label }}</ion-label>
+  <ion-label position="stacked" *ngIf="label">
+    {{ label }} <ion-text class="obligatoryDot" *ngIf="!disabled && obligatory"></ion-text>
+  </ion-label>
   <div class="description">
     <div class="placeholder" *ngIf="!getContent()">{{ placeholder }}</div>
     <div
@@ -26,5 +28,5 @@
       [innerHTML]="getContent() | highlight: _variables"
     ></div>
   </div>
-  <ion-icon slot="end" name="caret-down" class="selectIcon" *ngIf="!disabled"></ion-icon>
+  <ion-icon slot="end" name="chevron-forward" class="selectIcon"></ion-icon>
 </ion-item>
