Improved PDF template

--- a/idea/pdfTemplate/pdfTemplate.component.html
+++ b/idea/pdfTemplate/pdfTemplate.component.html
@@ -108,7 +108,7 @@
                     </ion-chip>
                     <!---->
                     <ion-chip
-                      color="secondary"
+                      color="dark"
                       *ngIf="section.columns[i].isComplex()"
                       [title]="displayField(section, i, true)"
                       [class.notTappable]="isViewLocked()"
