Custom fields: added option to use displayTemplate

--- a/idea/customFields/customSectionMeta.component.html
+++ b/idea/customFields/customSectionMeta.component.html
@@ -83,7 +83,7 @@
         </ion-col>
       </ion-row>
     </ion-list>
-    <ion-list class="aList ion-padding">
+    <ion-list class="aList ion-padding" *ngIf="useDisplayTemplate">
       <ion-list-header>
         <ion-label>
           <h3>{{ 'IDEA.CUSTOM_FIELDS.DISPLAY_TEMPLATE' | translate }}</h3>
