--- a/idea/subscription/stripeSubscription.component.html
+++ b/idea/subscription/stripeSubscription.component.html
@@ -59,7 +59,7 @@
     </ion-list-header>
     <ion-item lines="none">
       <ion-checkbox slot="start" [(ngModel)]="authorizationCheck"></ion-checkbox>
-      <ion-label class="ion-text-wrap disclaimer" style="z-index: 3;">
+      <ion-label class="ion-text-wrap disclaimer" style="z-index: 3">
         {{ 'IDEA.STRIPE.I_AUTHORIZE' | translate }}
         <ion-text class="anchor" (click)="openWebsite($event)">ITER IDEA</ion-text>
         {{ 'IDEA.STRIPE.AUTHORIZATION_CHECK_TEXT' | translate }}
