--- a/idea/subscription/subscriptionSummary.component.html
+++ b/idea/subscription/subscriptionSummary.component.html
@@ -13,10 +13,10 @@
 <!-- SKELETON -->
 <ion-item lines="none" *ngIf="!ready">
   <ion-label>
-    <b><ion-skeleton-text animated style="width: 40%;"></ion-skeleton-text></b>
+    <b><ion-skeleton-text animated style="width: 40%"></ion-skeleton-text></b>
     <p>
-      <i><ion-skeleton-text animated style="width: 50%;"></ion-skeleton-text></i>
+      <i><ion-skeleton-text animated style="width: 50%"></ion-skeleton-text></i>
     </p>
-    <p><ion-skeleton-text animated style="width: 60%;"></ion-skeleton-text></p>
+    <p><ion-skeleton-text animated style="width: 60%"></ion-skeleton-text></p>
   </ion-label>
 </ion-item>
