--- a/idea/dateTime/calendarPicker.component.html
+++ b/idea/dateTime/calendarPicker.component.html
@@ -20,7 +20,7 @@
         {{ 'IDEA.CALENDAR.SET_DATE' | translate }}
       </h1>
     </ion-row>
-    <ion-row style="margin-bottom: 8px;">
+    <ion-row style="margin-bottom: 8px">
       <ion-col class="ion-text-center ion-no-padding" [size]="5">
         <ion-row class="ion-align-items-center ion-justify-content-center">
           <ion-col class="ion-text-right ion-no-padding" [size]="3">
@@ -63,7 +63,7 @@
         </ion-row>
       </ion-col>
     </ion-row>
-    <ion-row style="margin-bottom: 8px;" class="headerLabel">
+    <ion-row style="margin-bottom: 8px" class="headerLabel">
       <ion-col class="ion-text-center ion-no-padding" *ngFor="let ddd of weekDays">
         {{ ddd }}
       </ion-col>
@@ -114,9 +114,7 @@
           </ion-col>
         </ion-row>
       </ion-col>
-      <ion-col class="ion-text-center ion-no-padding" [size]="1">
-        :
-      </ion-col>
+      <ion-col class="ion-text-center ion-no-padding" [size]="1"> : </ion-col>
       <ion-col class="ion-no-padding" [size]="4">
         <ion-row>
           <ion-col class="ion-text-center ion-no-padding" [size]="4" *ngFor="let minute of minutes">
