--- a/idea/resourceCenter/RCFolders.component.html
+++ b/idea/resourceCenter/RCFolders.component.html
@@ -28,7 +28,7 @@
   <ion-list class="aList">
     <ion-item *ngIf="!filteredFolders">
       <ion-label>
-        <ion-skeleton-text animated style="width: 50%;"></ion-skeleton-text>
+        <ion-skeleton-text animated style="width: 50%"></ion-skeleton-text>
       </ion-label>
     </ion-item>
     <ion-item class="noElements" *ngIf="filteredFolders && !filteredFolders.length">
