--- a/idea/resourceCenter/RCResources.component.html
+++ b/idea/resourceCenter/RCResources.component.html
@@ -23,7 +23,7 @@
         type="file"
         accept=".jpg,.jpeg,.png,.pdf"
         multiple
-        style="display: none;"
+        style="display: none"
         (change)="uploadNewResources($event)"
       />
     </ion-buttons>
@@ -49,7 +49,7 @@
     </ion-list-header>
     <ion-item *ngIf="!filteredResources">
       <ion-label>
-        <ion-skeleton-text animated style="width: 50%;"></ion-skeleton-text>
+        <ion-skeleton-text animated style="width: 50%"></ion-skeleton-text>
       </ion-label>
     </ion-item>
     <ion-item class="noElements" *ngIf="filteredResources && !filteredResources.length">
@@ -87,7 +87,7 @@
           [id]="r.resourceId.concat('_picker')"
           type="file"
           accept=".jpg,.jpeg,.png,.pdf"
-          style="display: none;"
+          style="display: none"
           (change)="updateResource(r, $event)"
         />
       </ion-item>
