--- a/idea/offline/offlineManager.component.html
+++ b/idea/offline/offlineManager.component.html
@@ -26,7 +26,9 @@
       <ion-label class="ion-text-wrap">
         <h3 class="lastSyncAt">
           {{ 'IDEA.OFFLINE.LAST_SYNC' | translate }}:
-          <ion-text>{{ getLastSyncLabel() }}</ion-text>
+          <ion-text>
+            {{ offline.lastSyncAt ? (offline.lastSyncAt | dateLocale: 'medium') : ('IDEA.OFFLINE.NEVER' | translate) }}
+          </ion-text>
         </h3>
         <p *ngIf="offline.errorInLastSync">
           <ion-text color="danger">
