--- a/modules/plans-subscription/src/subscription/subscription.component.html
+++ b/modules/plans-subscription/src/subscription/subscription.component.html
@@ -72,7 +72,7 @@
         color="medium"
         (click)="openLink(t._('IDEA_VARIABLES.TERMS_AND_CONDITIONS_URL'))"
       >
-        {{ 'IDEA.AUTH.TERMS_AND_CONDITIONS' | translate }}
+        {{ 'IDEA_AUTH.TERMS_AND_CONDITIONS' | translate }}
       </ion-button>
 
       <ion-button
@@ -81,7 +81,7 @@
         color="medium"
         (click)="openLink(t._('IDEA_VARIABLES.PRIVACY_POLICY_URL'))"
       >
-        {{ 'IDEA.AUTH.PRIVACY_POLICY' | translate }}
+        {{ 'IDEA_AUTH.PRIVACY_POLICY' | translate }}
       </ion-button>
       <ion-button expand="block" fill="clear" color="danger" *ngIf="subscription" (click)="cancelSubscription()">
         {{ 'IDEA_PS.SUBSCRIPTION.CANCEL_SUBSCRIPTION' | translate }}
