--- a/modules/common/src/checker/checks.component.scss
+++ b/modules/common/src/checker/checks.component.scss
@@ -1,3 +1,17 @@
+ion-toolbar.secondary {
+  --min-height: 44px;
+  ion-title {
+    font-size: 0.8em;
+  }
+  ion-buttons ion-button {
+    height: auto;
+    font-size: 0.8em;
+    --padding-top: 6px;
+    --padding-end: 8px;
+    --padding-bottom: 6px;
+    --padding-start: 8px;
+  }
+}
 .checksList {
   .check {
     --background: var(--ion-color-white);
