Agenda: adapted to new Checker

--- a/modules/agenda/src/calendar.component.html
+++ b/modules/agenda/src/calendar.component.html
@@ -50,6 +50,7 @@
         [searchPlaceholder]="t._('IDEA_AGENDA.CALENDARS.WHO_CAN_MANAGE_APPOINTMENTS')"
         [noneText]="t._('IDEA_AGENDA.CALENDARS.NOBODY')"
         [allText]="t._('IDEA_AGENDA.CALENDARS.EVERYONE')"
+        [allowSelectDeselectAll]="true"
         [lines]="'inset'"
       ></idea-checker>
     </ion-list>
