Fix viewMode in Chrome

--- a/modules/common/css/global.scss
+++ b/modules/common/css/global.scss
@@ -89,6 +89,7 @@ ion-popover.actionSheetPopover {
   .native-input[disabled],
   .item-disabled,
   .native-textarea[disabled],
+  ion-item ion-label[position='stacked'],
   ion-input {
     opacity: 1 !important;
     -webkit-text-fill-color: var(--ion-text-color);
