MD forces * standard for italic (no _)

--- a/modules/common/src/mde/mdeToolbar.component.html
+++ b/modules/common/src/mde/mdeToolbar.component.html
@@ -1,5 +1,5 @@
 <div class="mdeToolbar">
   <b>**{{ 'IDEA_COMMON.MDE.TOOLBAR.BOLD' | translate }}**</b>
-  <i>_{{ 'IDEA_COMMON.MDE.TOOLBAR.ITALIC' | translate }}_</i>
+  <i>*{{ 'IDEA_COMMON.MDE.TOOLBAR.ITALIC' | translate }}*</i>
   ~{{ 'IDEA_COMMON.MDE.TOOLBAR.STRIKE' | translate }}~
 </div>
